--- a/hyperacusis.html
+++ b/hyperacusis.html
@@ -68,7 +68,7 @@
 
   <p class="lead">
     Hyperacusis is a condition characterized by an abnormally heightened sensitivity to everyday sounds that are typically well tolerated by others. 
-    People with hyperacusis may perceive normal environmental noises — such as running water, clinking dishes, or voices — as uncomfortably loud, intrusive, or even painful. 
+    People with hyperacusis may perceive normal environmental noises (such as running water, clinking dishes, or voices) as uncomfortably loud, intrusive, or even painful. 
     This reaction does not stem from hearing loss but rather from a dysregulation within the auditory system, where sound processing pathways become overly reactive. 
     Hyperacusis may occur alone or alongside tinnitus, noxacusis, or other auditory disorders.
   </p>
@@ -85,7 +85,7 @@
     <li>Can affect one ear (unilateral) or both ears (bilateral).</li>
     <li>Often occurs alongside tinnitus or noxacusis.</li>
     <li>May lead to anxiety, stress, or avoidance of noisy environments.</li>
-    <li>Severity varies — some individuals experience mild discomfort, while others have debilitating sound sensitivity.</li>
+    <li>Severity varies; some individuals experience mild discomfort, while others have debilitating sound sensitivity.</li>
     <li>Often triggered by acoustic trauma, prolonged noise exposure, or neurological dysfunction.</li>
     <li>Management includes sound protection and gradual, controlled reintroduction of tolerable sounds.</li>
   </ul>
@@ -94,7 +94,7 @@
       <h1>Noxacusis</h1>
 
   <p class="lead">
-    Noxacusis is a condition in which everyday sounds are perceived as painful or uncomfortably intense. 
+    Noxacusis is a condition in which everyday sounds are perceived as <strong>painful or uncomfortably intense</strong>. 
     Unlike hyperacusis, which primarily causes heightened sensitivity, noxacusis often produces a strong, sometimes sharp, physical discomfort in response to ordinary noises. 
     Many individuals with noxacusis also experience hyperacusis, as the two conditions frequently overlap and share similar underlying mechanisms within the auditory system. 
     Noxacusis may also be associated with tonic tensor tympani syndrome (TTTS), a condition in which involuntary contraction of the tensor tympani muscle in the middle ear can amplify the perception of sound and contribute to pain.
@@ -108,7 +108,7 @@
     <li>Severity varies widely between individuals, from mild discomfort to debilitating pain.</li>
     <li>Management typically includes sound protection, controlled exposure to tolerable sounds, and strategies to reduce middle ear muscle overactivity.</li>
     <li>Understanding the relationship with TTTS is important, as treatment may involve therapies targeting muscle tension in addition to sound desensitization.</li>
-    <li><strong>Minimizing exposure to loud or triggering sounds is essential to prevent worsening of noxacusis.</strong></li>
+    <li>Minimizing exposure to loud or triggering sounds is essential to prevent worsening of noxacusis.</li>
 
   </ul>
 </section>
@@ -119,11 +119,11 @@
     Hyperacusis and misophonia are both conditions involving abnormal sound sensitivity, but they differ in their underlying nature and triggers. 
    </p>
    <p>
-    Hyperacusis is a physical intolerance to everyday sounds that are perceived as uncomfortably loud, painful, or even physically distressing. 
+    Hyperacusis is a <strong>physical intolerance</strong> to everyday sounds that are perceived as uncomfortably loud or even physically distressing. 
     It reflects an increased auditory gain or sensitivity within the hearing system itself. 
     </p>
     <p>
-    In contrast, misophonia is characterized by strong emotional or behavioral reactions — such as anger, anxiety, or disgust — to specific “trigger” sounds, like chewing, breathing, or tapping. 
+    In contrast, misophonia is characterized by strong <strong>emotional or behavioral reactions</strong> (such as anger, anxiety, or disgust) to specific “trigger” sounds, like chewing, breathing, or tapping. 
     These reactions are not related to loudness but rather to how the brain interprets certain sounds as highly aversive.
   </p>
 
@@ -134,16 +134,6 @@
     Individuals with misophonia, however, usually have normal LDL results, since their discomfort stems from emotional or contextual reactions rather than physical loudness.
   </p>
 
-     <h2>Key Differences</h2>
-  <ul>
-    <li><strong>Hyperacusis:</strong> Physical intolerance to the volume or intensity of everyday sounds.</li>
-    <li><strong>Misophonia:</strong> Emotional or behavioral reaction to specific trigger sounds, often repetitive or pattern-based.</li>
-    <li>Hyperacusis can make ordinary sounds physically uncomfortable or painful, while misophonia primarily causes emotional distress.</li>
-    <li>Hyperacusis often affects multiple sounds in the environment; misophonia is usually triggered by very specific noises.</li>
-    <li>LDL testing can help distinguish the two: hyperacusis shows reduced loudness tolerance, while misophonia does not.</li>
-    <li>Both conditions can coexist in the same individual, complicating management strategies.</li>
-    <li>Management differs: hyperacusis often focuses on sound desensitization and protection, while misophonia may involve behavioral therapy and emotional regulation techniques.</li>
-  </ul>
     </article>
   </main>
 
