--- a/imaging.html
+++ b/imaging.html
@@ -63,7 +63,7 @@
       <h1>Medical Imaging</h1>
       
       <p>
-        When hyperacusis first develops, it’s important to consider imaging early —
+        When hyperacusis symptoms first develop, it’s important to consider imaging early,
         ideally before symptoms become too severe to tolerate medical procedures. Early CT imaging provides crucial information that can 
         guide management before hyperacusis becomes debilitating.
       </p>
