--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
       </p>
 
       <p>
-      It is common for family members to urge you to seek treatment when they see how much you are struggling. However, because severe hyperacusis is a rare and poorly understood condition, even well-meaning advice can be harmful. In some cases, families may assume the condition is purely psychological — an impression often reinforced by misinformation found online. 
+      It is common for family members to urge you to seek treatment when they see how much you are struggling. However, because severe hyperacusis is a rare and poorly understood condition, even well-meaning advice can be harmful. In some cases, families may assume the condition is purely psychological, an impression often reinforced by misinformation found online. 
       </p>
       <p>
-      <strong><i>**Remember that if someone pressures you into treatment that exposes you to sound levels beyond your limits (Tinnitus Retraining Therapy (TRT), inpatient psychiatric treatment, etc.) resulting in a setback, you are the one who must live with the consequences — no one else experiences your suffering firsthand.**
+      <strong><i>**Remember that if someone pressures you into treatment that exposes you to sound levels beyond your limits (Tinnitus Retraining Therapy (TRT), inpatient psychiatric treatment, etc.) resulting in a setback, you are the one who must live with the consequences. No one else experiences your suffering firsthand.**
       </i></strong>
       </p>
 
@@ -108,7 +108,7 @@
       <ul>
         <li>Create a quiet home environment where sound levels are predictable and consistently below your discomfort threshold.</li>
         <li>Eliminate sudden, unpredictable noises (door slams, kitchen clatter, TV/radio, etc.).</li>
-        <li>Avoid any sound that causes pain, burning, flare-ups, or worsening of symptoms — even if it is not "loud" by normal standards.</li>
+        <li>Avoid any sound that causes pain, burning, flare-ups, or worsening of symptoms, even if it is not "loud" by normal standards.</li>
       </ul>
 
       <h2>2. Protective Equipment Use</h2>
@@ -128,14 +128,14 @@
         <ul>
           <li>No headphones, earbuds, or speakers playing music, podcasts, or videos.</li>
           <li>No phone call audio; use live captioning, text, or email options instead.</li>
-          <li>Limit all non-essential media — even at low volumes — until stability improves.</li>
+          <li>Limit all non-essential media, even at low volumes, suntil stability improves.</li>
         </ul>
       </ul>
 
       <h2>4. Homebound Voluntary Precaution</h2>
       <ul>
-        <li>Minimize leaving home except for essential medical visits.</li>
-        <li>This precaution may be temporary but is important in the early phase to prevent irreversible setbacks.</li>
+        <li>Minimize leaving home except for essential medical visits. <i>This precaution may be temporary but is important in the early phase to prevent irreversible setbacks.</i></li>
+
         <li>Arrange errands, deliveries, and communication so you can maintain a low-noise environment.</li>
       </ul>
 
@@ -148,7 +148,7 @@
           
         </ul>
         <li>Purpose: Rule out bony or structural causes (superior semicircular canal dehiscence syndrome, ossicular abnormalities, round or oval window defects, etc.) and evaluate surgical options.</li>
-        <i>High-resolution temporal bone CT is a very common study and nearly every hospital and imaging center has a standardized protocol for this exam. Any ENT specialist should be able to order this exam, however, after the imaging is completed you will likely need referal to a highly-specialized ENT with experience treating hyperacusis — ideally with expertise in the Silverstein Procedure.</i>
+        <i>High-resolution temporal bone CT is a very common study and nearly every hospital and imaging center has a standardized protocol for this exam. Any ENT specialist should be able to order this exam, however, after the imaging is completed you will likely need referal to a highly-specialized ENT with experience treating hyperacusis, ideally with expertise in the Silverstein Procedure.</i>
       </ul>
 
       <h2>6. Specialist Review</h2>
@@ -165,7 +165,7 @@
       <h2>7. Treatment Planning</h2>
       <ul>
         <li>Discuss possible interventions after imaging.</li>
-        <li>Ensure the provider can perform — or refer for — all above options if indicated.</li>
+        <li>Ensure the provider can perform, or refer for, all above options if indicated.</li>
       </ul>
 
       <h2>8. Time & Preparedness</h2>
@@ -195,7 +195,7 @@
           <li>Eating a healthy whole-food diet.</li>
           <li>Limiting time with people who are consistently stressful, unsupportive, or dismissive of your needs.</li>
         </ul>
-        <i>These are suggestions — find what works best for your body and mind.</i>
+        <i>These are suggestions, find what works best for your body and mind.</i>
       </ul>
 
       <h2>11. General Precautions</h2>
@@ -205,7 +205,7 @@
         <li>Avoid procedures that may worsen your condition, including:</li>
         <ul>
           <li>MRI scans (due to loud noises and vibrations).</li>
-          <li>Loudness Decibel Level (LDL) testing.</li>
+          <li>Loudness Discomfort Level (LDL) testing.</li>
           <li>Ear microsuction or irrigation procedures.</li>
           <li>Dental procedures, especially those involving drilling or ultrasonic cleaning.</li>
         </ul>
