--- a/medications.html
+++ b/medications.html
@@ -62,20 +62,20 @@
       <h1>Medications</h1>
 
   <p class="lead">
-    Various medications have been explored for the management of hyperacusis, noxacusis, and tonic tensor tympani syndrome (TTTS), though none have demonstrated consistent or definitive benefits. 
+    Various medications have been explored for the management of hyperacusis, noxacusis, and tonic tensor tympani syndrome (TTTS), though none have demonstrated consistent benefits. 
     </p>
     <p>Some patients report temporary relief with benzodiazepines, such as clonazepam or diazepam, which can help calm neural hyperexcitability and reduce anxiety associated with sound sensitivity. 
-    However, <strong>benzodiazepines carry an extremely high risk of dependence and withdrawal</strong> and should be avoided unless absolutely necessary, with limited use in specific situations such as travel. 
+    Due to their high potential for dependence and withdrawal, benzodiazepines should generally be avoided, with limited use reserved for specific circumstances such as travel.
   </p>
   <p>
-    Other medications, including tricyclic antidepressants, serotonin-norepinephrine reuptake inhibitors (SNRIs), and anticonvulsants, have been tried with variable results. Ambroxol, a mucolytic drug with sodium channel–blocking and neuroprotective properties, has been reported 
-        by some patients to reduce pain symptoms in noxacusis, though the results are inconsistent. 
+    Other medications, including tricyclic antidepressants, serotonin-norepinephrine reuptake inhibitors (SNRIs), and anticonvulsants have been tried with variable results. Ambroxol, a mucolytic drug with sodium channel–blocking and neuroprotective properties, has been reported 
+        by some patients to reduce pain symptoms in noxacusis, but the results are inconsistent. 
     </p>
     <p>
-    Overall, pharmacologic approaches remain largely experimental, and treatment must be individualized, cautious, and combined with environmental stabilization to prevent further auditory injury.
+    Overall, pharmacologic approaches remain largely experimental, and treatment must be individualized and combined with a controlled sound environment to prevent further auditory injury.
     </p>
     <p>
-    Real-world data collected from patients who have tried a variety of treatments, including clomipramine, duloxetine, amitriptyline, nortriptyline, ambroxol, Botox, and tympanic membrane paper patching can be found in the following spreadsheet:
+    Real data collected from patients who have tried a variety of treatments, including antidepressants, ambroxol, Botox, and tympanic membrane paper patching can be found in the following spreadsheet:
     </p>
     <p>
     
@@ -89,11 +89,11 @@
   </h2>
 
   <ul>
-    <li><strong>Benzodiazepines (clonazepam, diazepam):</strong> may temporarily reduce sound sensitivity, muscle spasms, and anxiety but carry and extremely high risk of dependence and withdrawal. <i>Withdrawal from benzodiazepines can be extremely difficult, often requiring a gradual taper over many months. In some cases, individuals experience protracted withdrawals that may persist for years, underscoring the need for great caution when using or discontinuing these medications.</i></li>
-    <li><strong>Tricyclic antidepressants (clomipramine, amitriptyline, nortriptyline):</strong> clomipramine has become the most widely used medication for managing hyperacusis and noxacusis symptoms, and while it seems to be highly effective for some, many patients see minimal or no relief from their symptoms. Tricyclic antidepressants are an older class of medications associated with a range of side effects that may be difficult for some patients to tolerate.</li>
-    <li><strong>SNRIs (duloxetine):</strong> explored for central pain modulation, variable effectiveness.</li>
-    <li><strong>Anticonvulsants (gabapentin, pregabalin):</strong> may help neuropathic auditory pain, results inconsistent.</li>
-    <li><strong>Ambroxol:</strong> experimental use for neuroprotection and auditory pain relief, results inconsistent, but generally considered safe. Main side effects are gastrointentestinal issues and dryness of the mouth and throat.</li>
+    <li><strong>Benzodiazepines (clonazepam, diazepam):</strong> May temporarily reduce sound sensitivity, muscle spasms, and anxiety but carry an extremely high risk of dependence and withdrawal. <i>Withdrawal from benzodiazepines can be extremely difficult, often requiring a gradual taper over many months. In some cases, individuals experience protracted withdrawals that may persist for years, underscoring the need for great caution when using or discontinuing these medications.</i></li>
+    <li><strong>Tricyclic antidepressants (clomipramine, amitriptyline, nortriptyline):</strong> Clomipramine has become the most widely used medication for managing hyperacusis and noxacusis symptoms, and while it seems to be highly effective for some, many patients see minimal or no relief from their symptoms. Tricyclic antidepressants are an older class of medications associated with a range of side effects that may be difficult for some patients to tolerate.</li>
+    <li><strong>SNRIs (duloxetine):</strong> Explored for central pain modulation, variable effectiveness.</li>
+    <li><strong>Anticonvulsants (gabapentin, pregabalin):</strong> May help neuropathic auditory pain, variable effectiveness.</li>
+    <li><strong>Ambroxol:</strong> Experimental use for neuroprotection and auditory pain relief, variable effectiveness. Ambroxol is generally considered safe and the most common side effects are gastrointentestinal issues and dryness of the mouth and throat.</li>
   </ul>
 
     <h2>
@@ -101,20 +101,23 @@
   </h2>
 
   <p>
-  Clomipramine warrants special mention as it has been the most widely used medication for managing hyperacusis and noxacusis symptoms. Among the various pharmacologic options explored, clomipramine has shown the most consistent use and anecdotal benefit in reducing auditory hypersensitivity and related anxiety.
+  Clomipramine warrants special mention as it has been the most widely used medication for managing hyperacusis and noxacusis symptoms. Among the various pharmacologic options explored, clomipramine has shown the most consistent anecdotal benefit in reducing auditory hypersensitivity and related anxiety.
   </p>
   <p>
-  Despite reports of success from many patients, a significant number experienced little to no improvement in their symptoms while using clomipramine. At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and believe we have identified a specific subgroup that appears to respond most favorably to clomipramine. These patients typically share the following characteristics:
+  Despite reports of success from many patients, a significant number experienced little to no improvement in their symptoms while using clomipramine. At <i>Hyperacusis Guide</i>, we have reviewed hundreds of patient cases and believe we have identified a specific subgroup that responds most favorably to clomipramine. These patients typically share the following characteristics:
   </p>
   <ul>
-      <li><strong>Little to no true loudness hyperacusis:</strong></li>
-    <li><strong>No permanent setbacks from sound exposure:</strong></li>
-    <li><strong>Neuralgia-type pain:</strong></li>
-  </ul>
-    <p>
-  One of the more concerning side effects is increased tinnitus upon starting the medication, but several patients have reported that tinnitus returns to baseline after a few weeks on the medication.
-  </p>
+      <li><strong>Hyperacusis symptoms are mild:</strong> Patients are able to carry out normal daily activities, continue working, and tolerate normal environmental sounds without fear of a permanent setback, even if this requires the use of hearing protection.<i> Based on our knowledge, no patients who are truly catastrophic and homebound have reported meaningful improvement in their symptoms after taking clomipramine.</i></li>
+      <li><strong>No permanent setbacks:</strong> Patients may have a temporary setback from exposing to sound above their tolerance threshold, but return to their previous baseline after a period of rest.</li>
+    <li><strong>Neuralgia-type pain:</strong> Almost all of these patients complain of neuralgia-type pain, frequently a burning sensation that radiates from around the ear into the face and head. </li>
 
+  </ul>
+  <p>
+  Clomipramine belongs to an older class of antidepressants known as tricyclic antidepressants (TCAs). Although effective for certain conditions, TCAs affect multiple neurotransmitter systems and are associated with a wide range of side effects. Common reactions include drowsiness, dry mouth, and dizziness, while more serious effects such as cardiac arrhythmias and orthostatic hypotension may also occur. Clomipramine has additionally been reported to worsen symptoms of visual snow syndrome (VSS), potentially intensifying visual disturbances like static-like visual noise, light sensitivity, and after-images in susceptible individuals.
+  </p>
+  <p>
+  Several individuals have reported an initial increase in tinnitus after starting clomipramine. In many cases, this exacerbation was temporary, with tinnitus gradually returning to baseline after a few weeks of continued use. However, some patients were unable to tolerate the medication and discontinued treatment due to a sustained worsening of tinnitus. Although clomipramine is typically introduced at a low dose, it often must be titrated to doses exceeding 200 mg per day before any meaningful improvement in hyperacusis or noxacusis symptoms is observed, which increases the likelihood of adverse effects.
+  </p>
       <div class="page-break" aria-hidden="true"></div>
       <h1>Botox</h1>
 
