--- a/mem.html
+++ b/mem.html
@@ -63,7 +63,7 @@
       <h1>Middle Ear Myoclonus (MEM)</h1>
 
       <p>
-       Middle Ear Myoclonus (MEM) is a rare condition where one or both of the tiny muscles in the middle ear — the tensor tympani or stapedius — begin to contract on their own. These muscle spasms can create clicking, fluttering, or thumping sounds in one or both ears, and in some cases the sounds can even be heard by another person using a stethoscope. 
+       Middle ear myoclonus (MEM) is a rare condition where one or both of the tiny muscles in the middle ear, the tensor tympani or stapedius, begin to contract on their own. These muscle spasms can create clicking, fluttering, or thumping sounds in one or both ears, and in some cases the sounds can even be heard by another person using a stethoscope. 
        </p>
        <p>
        The exact cause isn’t always clear, but symptoms can be triggered or worsened by stress, sound exposure, muscle tension, or nerve irritation. Symptoms often come and go and can vary in intensity from day to day.
@@ -72,7 +72,7 @@
 
     <h2>Key features</h2>
     <ul class="features">
-      <li>Involuntary muscle contractions of the middle ear muscles — usually the tensor tympani or stapedius.</li>
+      <li>Involuntary muscle contractions of the middle ear muscles, usually the tensor tympani or stapedius.</li>
       <li>Clicking, fluttering, or thumping sounds in one or both ears.</li>
       <li>Sounds may be rhythmic or irregular, and vary in frequency or intensity.</li>
       <li>May occur spontaneously or be triggered by sound, movement, stress, or tension.</li>
@@ -85,10 +85,7 @@
 
       <p>
         The <a class="link" href="https://www.facebook.com/groups/middleearmyoclonus/" target="_blank" 
-        rel="noopener noreferrer">Middle Ear Myoclonus Support Group</a> on Facebook offers a community where 
-        individuals can share their experiences, discuss symptoms, and explore treatment outcomes. It provides a space 
-        for members to connect with others facing similar challenges and to exchange valuable information about managing 
-        and understanding the condition.
+        rel="noopener noreferrer">Middle Ear Myoclonus (MEM) Support Group</a> is a Facebook community with over 2000 members who share their experiences, discuss symptoms, and explore treatment options.
       </p>
 
       <div class="page-break" aria-hidden="true"></div>
@@ -96,8 +93,8 @@
     <h1>Tonic Tensor Tympani Syndrome (TTTS)</h1>
 
     <p class="lead">
-      Tonic Tensor Tympani Syndrome (TTTS) is a condition in which the 
-      <strong>tensor tympani muscle</strong> inside the middle ear becomes overactive or 
+      Tonic tensor tympani syndrome (TTTS) is a condition in which the 
+      tensor tympani muscle inside the middle ear becomes overactive or 
       hypersensitive. This muscle normally contracts briefly in response to loud sounds 
       or sudden noise to protect the inner ear, but in TTTS, it can tighten involuntarily 
       or remain contracted for extended periods. 
@@ -123,10 +120,7 @@
 
       <p>
         The <a class="link" href="https://www.facebook.com/groups/503100723229728/" target="_blank" 
-        rel="noopener noreferrer">Tonic Tensor Tympani Syndrome Support Group</a> is a Facebook community which focuses on 
-        discussions, personal experiences, and treatment outcomes related to tonic tensor tympani syndrome (TTTS). This group 
-        provides a supportive environment where members can share insights, coping strategies, and information to help 
-        better understand and manage this complex condition.
+        rel="noopener noreferrer">Tonic Tensor Tympani Syndrome (TTTS) Support Group</a> is a Facebook community with over 2300 members who share their experiences, discuss symptoms, and explore treatment options.
       </p>
 
       <div class="page-break" aria-hidden="true"></div>
@@ -134,8 +128,8 @@
     <h1>Conservative Management</h1>
 
     <p class="lead">
-      For many individuals with Middle Ear Myoclonus (MEM) or 
-      Tonic Tensor Tympani Syndrome (TTTS), conservative management is 
+      For many individuals with middle ear myoclonus (MEM) or 
+      tonic tensor tympani syndrome (TTTS), conservative management is 
       often the first approach. These strategies focus on reducing triggers, easing 
       muscle tension, and improving sound tolerance. While results vary, many patients 
       experience relief through non-invasive techniques, lifestyle adjustments, and sound therapy.
@@ -143,15 +137,15 @@
 
     <h2>Conservative Management Strategies</h2>
     <ul class="management">
-      <li><strong>Sound therapy:</strong> Using low-level background noise to reduce hypersensitivity. <i>Note that sound therapy should be used with caution, especially in patients who also suffer from hyperacusis.</i></li>
-      <li><strong>Stress management & relaxation:</strong> Techniques such as deep breathing, meditation, or yoga to reduce muscle tension.</li>
-      <li><strong>Jaw, neck, and ear exercises:</strong> Gentle stretches and exercises to relieve tensor tympani or stapedius tension.</li>
-      <li><strong>Avoiding auditory triggers:</strong> Limiting exposure to loud or sudden noises that may provoke symptoms.</li>
-      <li><strong>Sleep hygiene:</strong> Ensuring adequate rest to reduce fatigue-related exacerbation of symptoms.</li>
-      <li><strong>Posture improvement:</strong> Maintaining good neck and shoulder posture to decrease muscular strain affecting the middle ear.</li>
-      <li><strong>Biofeedback or cognitive techniques:</strong> Learning to consciously relax ear muscles or reduce hypervigilance to sound.</li>
-      <li><strong>Use of ear protection when necessary:</strong> In situations with unavoidable loud noise, but avoiding overprotection to prevent sound sensitivity worsening.</li>
-      <li><strong>Gradual sound exposure:</strong> Slowly increasing exposure to sounds to build tolerance without triggering spasms.</li>
+      <li>Sound therapy: using low-level background noise to reduce hypersensitivity. <i>Note that sound therapy should be used with caution, especially in patients who suffer from hyperacusis.</i></li>
+      <li>Stress management & relaxation: techniques such as deep breathing, meditation, or yoga to reduce muscle tension.</li>
+      <li>Jaw, neck, and ear exercises: gentle stretches and exercises to relieve tensor tympani or stapedius tension.</li>
+      <li>Avoiding auditory triggers: limiting exposure to loud or sudden noises that may provoke symptoms.</li>
+      <li>Sleep hygiene: ensuring adequate rest to reduce fatigue-related exacerbation of symptoms.</li>
+      <li>Posture improvement: maintaining good neck and shoulder posture to decrease muscular strain affecting the middle ear.</li>
+      <li>Biofeedback or cognitive techniques: learning to consciously relax ear muscles or reduce hypervigilance to sound.</li>
+      <li>Use of ear protection when necessary: in situations with unavoidable loud noise.</li>
+      <li>Gradual sound exposure: slowly increasing exposure to sounds to build tolerance without triggering spasms.</li>
     </ul>
 
       <div class="page-break" aria-hidden="true"></div>
@@ -160,8 +154,8 @@
 
     <p class="lead">
       For individuals with more persistent or severe symptoms of 
-      Middle Ear Myoclonus (MEM) or 
-      Tonic Tensor Tympani Syndrome (TTTS), medical management may 
+      middle ear myoclonus (MEM) or 
+      tonic tensor tympani syndrome (TTTS), medical management may 
       be recommended. This typically involves medications to reduce muscle spasms, 
       inflammation, or anxiety, and in select cases, minor procedures. Medical strategies 
       are usually combined with conservative measures to maximize symptom relief.
@@ -169,18 +163,18 @@
 
     <h2>Medical Management Strategies</h2>
     <ul class="management">
-      <li><strong>Muscle relaxants:</strong> Medications to reduce involuntary tensor tympani or stapedius contractions.</li>
-      <li><strong>Anti-anxiety medications:</strong> Used if stress or anxiety is contributing to symptoms.</li>
-      <li><strong>Anti-seizure or nerve-stabilizing medications:</strong> Sometimes prescribed to control abnormal nerve signals to middle ear muscles.</li>
-      <li><strong>Anti-inflammatory medications:</strong> Short-term use if inflammation is suspected to aggravate muscle spasms.</li>
-      <li><strong>Botulinum toxin injections:</strong> In select cases, tiny injections into the affected middle ear muscles to reduce spasm.</li>
-      <li><strong>Hearing protection & counseling:</strong> To avoid sound triggers while still maintaining gradual sound exposure therapy.</li>
-      <li><strong>Combination therapy:</strong> Often used alongside conservative management like sound therapy, relaxation, and jaw/neck exercises.</li>
-      <li><strong>Monitoring & follow-up:</strong> Regular evaluation by an ENT or audiologist to track progress and adjust treatment.</li>
+      <li>Muscle relaxants: medications to reduce involuntary tensor tympani or stapedius contractions.</li>
+      <li>Anti-anxiety medications: used if stress or anxiety is contributing to symptoms.</li>
+      <li>Anti-seizure medications: sometimes prescribed to control abnormal nerve signals to middle ear muscles.</li>
+      <li>Anti-inflammatory medications: short-term use if inflammation is suspected to aggravate muscle spasms.</li>
+      <li>Botulinum toxin injections: in select cases, tiny injections into the tensor tympani and stapedius (using a trans-canal approach) or tensor veli palatini (TVP) to reduce spasm.</li>
+      <li>Hearing protection & counseling: to avoid sound triggers while still maintaining gradual sound exposure therapy.</li>
+      <li>Combination therapy: often used alongside conservative management like sound therapy, relaxation, and jaw/neck exercises.</li>
+      <li>Monitoring & follow-up: regular evaluation by an ENT or audiologist to track progress and adjust treatment.</li>
     </ul>
 
       <p>
-      <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Medication, Botox, and Paper Patching Spreadsheet</a> — There are several patients in this spreadsheet who have detailed their experiences treating Tonic Tensor Tympani Syndrome (TTTS) and Middle Ear Myoclonus (MEM) using medications and Botox.
+      <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Medication, Botox, and Paper Patching Spreadsheet</a> — There are several patients in this spreadsheet who have detailed their experiences treating tonic tensor tympani syndrome (TTTS) and middle ear myoclonus (MEM) using medications and Botox.
       </P>
 
       <div class="page-break" aria-hidden="true"></div>
@@ -188,8 +182,8 @@
     <h1>Surgical Management</h1>
 
     <p class="lead">
-      In rare cases where symptoms of Middle Ear Myoclonus (MEM) or 
-      Tonic Tensor Tympani Syndrome (TTTS) are severe and do not respond 
+      In rare cases where symptoms of middle ear myoclonus (MEM) or 
+      tonic tensor tympani syndrome (TTTS) are severe and do not respond 
       to conservative or medical management, surgical options may be considered. Surgical 
       interventions aim to reduce or eliminate involuntary muscle contractions in the middle 
       ear while preserving hearing. These procedures are typically considered only after 
@@ -198,13 +192,12 @@
 
     <h2>Surgical Management Strategies</h2>
     <ul class="management">
-      <li><strong>Tenotomy of the tensor tympani:</strong> Cutting or partially releasing the tensor tympani muscle to stop involuntary contractions.</li>
-      <li><strong>Stapedius tendon section:</strong> In select cases, surgically releasing or modifying the stapedius tendon to relieve spasms.</li>
-      <li><strong>Micro-surgical myotomy:</strong> Targeted surgical intervention to reduce hyperactive middle ear muscle activity.</li>
-      <li><strong>Middle ear exploration:</strong> Carefully assessing middle ear anatomy to rule out other structural causes and allow precise intervention.</li>
-      <li><strong>Hearing preservation focus:</strong> All surgical procedures aim to minimize risk to hearing while addressing muscle dysfunction.</li>
-      <li><strong>Post-surgical follow-up:</strong> Monitoring recovery and symptoms, sometimes combined with sound therapy or rehabilitation exercises.</li>
-      <li><strong>Reserved for refractory cases:</strong> Surgery is generally only recommended when all other treatments have failed.</li>
+      <li>Tenotomy of the tensor tympani: cutting or partially releasing the tensor tympani muscle to stop involuntary contractions.</li>
+      <li>Stapedius tendon section: cutting or partially releasing the stapedius tendon to relieve spasms.</li>
+      <li>Middle ear exploration: carefully assessing middle ear anatomy to rule out other structural causes.</li>
+      <li>Hearing preservation: all surgical procedures aim to minimize risk to hearing while addressing muscle dysfunction.</li>
+      <li>Post-surgical follow-up: monitoring recovery and symptoms, sometimes combined with sound therapy or rehabilitation exercises.</li>
+      <li>Reserved for refractory cases: Surgery is generally only recommended when all other treatments have failed.</li>
     </ul>
 
 
