--- a/tinnitus.html
+++ b/tinnitus.html
@@ -88,7 +88,7 @@
 
       <p class="lead">
     The <a class="link" href="https://www.tinnitushub.com/dr-susan-shore-auricle-questions-answers/" target="_blank" rel="noopener noreferrer">Susan Shore device</a>, developed at the University of Michigan, is an experimental treatment 
-    for tinnitus that uses a technique known as <strong>bimodal neuromodulation</strong>. 
+    for tinnitus that uses a technique known as bimodal neuromodulation. 
     This approach combines precisely timed sounds with mild electrical stimulation of the face or neck 
     to retrain the brain’s auditory pathways and reduce tinnitus perception. 
     The device is currently undergoing clinical testing and has shown 
@@ -121,10 +121,10 @@
 
       <p class="lead">
     The <a class="link" href="https://www.lenire.com/" target="_blank" rel="noopener noreferrer">Lenire device</a> is a tinnitus treatment developed by Neuromod Devices that uses 
-    <strong>bimodal neuromodulation</strong> — a combination of sound stimulation and mild electrical impulses delivered to the tongue. 
+    bimodal neuromodulation; a combination of sound stimulation and mild electrical impulses delivered to the tongue. 
     The goal is to retrain the brain’s auditory system and reduce the perception of tinnitus over time. 
     Lenire is one of the first commercially available bimodal stimulation devices for tinnitus and has been cleared for use 
-    in Europe and the United States. However, <strong>clinical outcomes have been mixed</strong>, with some patients reporting 
+    in Europe and the United States. However, clinical outcomes have been mixed, with some patients reporting 
     modest improvement and others experiencing little to no change in symptoms.
   </p>
 
@@ -136,20 +136,20 @@
     <li>Treatment is typically administered under audiologist supervision and customized to the individual’s tinnitus profile.</li>
     <li>Sessions usually last 30–60 minutes and are performed daily over several weeks or months.</li>
     <li>Has received regulatory approval in the EU and FDA authorization in the United States.</li>
-    <li>Clinical studies report <strong>variable results</strong>, with effectiveness differing widely among users.</li>
+    <li>Clinical studies report variable results, with effectiveness differing widely among users.</li>
     <li>Some patients report temporary reduction in tinnitus loudness or annoyance, while others notice minimal or no benefit.</li>
   </ul>
 
   <p class="lead">
-  While both the Susan Shore device and Lenire use <strong>bimodal neuromodulation</strong> to target tinnitus, 
+  While both the Susan Shore device and Lenire use bimodal neuromodulation to target tinnitus, 
   early findings suggest notable differences in their approach and effectiveness. 
   The Susan Shore device delivers <strong>precisely timed electrical stimulation</strong> to the neck or face in coordination with sound, 
-  directly targeting the <strong>dorsal cochlear nucleus</strong> — a key region involved in tinnitus generation. 
+  directly targeting the <strong>dorsal cochlear nucleus</strong>, a key region involved in tinnitus generation. 
   </p>
   <p>
   Lenire, by contrast, delivers gentle electrical impulses to the tongue through a mouthpiece paired with sound therapy. 
   Although Lenire has received regulatory approval and is commercially available in some regions, 
-  <strong>independent studies and user reports have shown mixed results</strong>, 
+  independent studies and user reports have shown mixed results, 
   with many patients experiencing only partial or temporary improvement, while others notice no benefit. 
   The Susan Shore device, still in clinical testing, aims to refine this approach with more precise timing and individualized calibration.
 </p>
@@ -170,7 +170,7 @@
     <ul class="features">
       <li>Based on the neurophysiological model of tinnitus, which links perception and emotional response.</li>
       <li>Combines <strong>educational counseling</strong> with <strong>sound therapy</strong>.</li>
-      <li>Sound therapy uses low-level background noise to reduce the contrast between tinnitus and the environment.</li>
+      <li>Sound therapy uses low-level background noise (white noise) to reduce the contrast between tinnitus and the environment.</li>
       <li>Emphasizes <strong>habituation</strong>, teaching the brain to ignore tinnitus signals.</li>
       <li>Structured program usually lasts several months to years, depending on severity and response.</li>
       <li>Individualized to each patient’s hearing profile, tinnitus characteristics, and lifestyle.</li>
@@ -219,10 +219,10 @@ outcomes can vary and that rigorous, large-scale studies supporting its efficacy
   <a class="link" href="https://www.amazon.com/Tinnitus-Retraining-Therapy-Implementing-Neurophysiological/dp/0521088372" target="_blank" rel="noopener noreferrer"><i>Tinnitus Retraining Therapy: Implementing the Neurophysiological Model</i></a>
   (co-authored with Jonathan W. P. Hazell), outlined the principles of TRT and helped 
   popularize the neurophysiological model, though its clinical effectiveness remains 
-  unsubstantiated by solid evidence.
+  unsubstantiated by compelling evidence.
 </p>
 <p>
-Every member of the <i>Hyperacusis Guide</i> team suffers from varying levels of hyperacusis, noxacusis, and tinnitus. Three of us are completely homebound and unable to work, drive a car, or even walk outside. In the early stages of our conditions, each of us attempted to follow the principles of Tinnitus Retraining Therapy (TRT). Not only did these methods fail to bring improvement, but in several cases, they appeared to contribute to further worsening. Despite the widespread promotion of TRT within audiology, we believe the approach does not adequately address the complex reality of severe cases and often dismisses the experiences of those most profoundly affected.
+Every member of the <i>Hyperacusis Guide</i> team suffers from varying degrees of hyperacusis, noxacusis, and tinnitus. Three of us are completely homebound and unable to work, drive a car, or even walk outside. In the early stages of our conditions, each of us attempted to follow the principles of Tinnitus Retraining Therapy (TRT). Not only did these methods fail to bring improvement, but in several cases, they appeared to contribute to further worsening. Despite the widespread promotion of TRT within audiology, we believe the approach does not adequately address the complex reality of severe cases and often dismisses the experiences of those most profoundly affected.
 </p>
 
 <p>
